--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "ferramenta para ordenação de propriedades CSS em ordem alfabética",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node script.js"
   },
   "repository": {
     "type": "git",
